--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,16 +9,17 @@ on:
   pull_request:
     branches: [ "main" ]
 
+
+defaults:
+ run:
+  working-directory: ./backend
+
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         node-version: [20.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
     - uses: actions/checkout@v4
     - name: Use Node.js ${{ matrix.node-version }}
@@ -26,5 +27,4 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: cd backend
     - run: npm run make
