--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: Build-Windows-Client
 
 on:
@@ -12,12 +9,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./backend
     strategy:
       matrix:
         node-version: [20.x]
+
     steps:
     - uses: actions/checkout@v4
     - name: Use Node.js ${{ matrix.node-version }}
@@ -25,6 +20,11 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: ls -la
-    - run: npm i
-    - run: npm run make
+        
+    - name: Install dependencies
+      run: npm i
+      working-directory: ./backend
+
+    - name: Build project
+      run: npm run make
+      working-directory: ./backend
