--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,15 +15,21 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-        
-    - name: Install dependencies
-      run: npm i
+      working-directory: ./backend  # Explicitly set working-directory for node setup
+
+    - name: List files
+      run: ls -la
       working-directory: ./backend
+
+    - name: Install dependencies
+      run: npm install
+      working-directory: ./backend  # Make sure install runs in the correct directory
 
     - name: Build project
       run: npm run make
