Fixed start on boot, changed the way the app is installed and added a new auto start option

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,14 +1,13 @@
 {
   "name": "remote-manager",
-  "version": "1.6.0",
+  "productName": "remote-manager",
+  "version": "1.6.5",
   "author": "delg [me@delg.cc]",
   "description": "Remote Manager Application",
   "main": "index.js",
   "scripts": {
-    "start": "electron-forge start",
-    "package": "electron-forge package",
-    "make": "electron-forge make",
-    "test": "electron ."
+    "test": "electron .",
+    "make": "electron-builder"
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.1",
@@ -17,14 +16,19 @@
     "open": "^8.4.2"
   },
   "devDependencies": {
-    "@electron-forge/cli": "^7.4.0",
-    "@electron-forge/maker-deb": "^7.4.0",
-    "@electron-forge/maker-rpm": "^7.4.0",
-    "@electron-forge/maker-squirrel": "^7.4.0",
-    "@electron-forge/maker-zip": "^7.4.0",
-    "@electron-forge/plugin-auto-unpack-natives": "^7.4.0",
-    "@electron-forge/plugin-fuses": "^7.4.0",
-    "@electron/fuses": "^1.8.0",
-    "electron": "^32.0.1"
+    "electron": "^33.0.1",
+    "electron-builder": "^25.1.8"
+  },
+  "build": {
+    "appId": "cc.delg.remotemanager",
+    "productName": "Remote Manager",
+    "win": {
+      "target": "nsis"
+    },
+    "nsis": {
+      "oneClick": true,
+      "perMachine": true,
+      "allowToChangeInstallationDirectory": false
+    }
   }
 }
