--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,7 +7,7 @@
   "main": "index.js",
   "scripts": {
     "test": "electron .",
-    "make": "electron-builder"
+    "make": "electron-builder --win --x64"
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.1",
