--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ build:
     - npm run make  # Compile the Electron app
   artifacts:
     paths:
-      - Backend/out/  # Adjust this path if your build output directory is different
+      - Backend/dist/  # Adjust this path if your build output directory is different
   only:
     - main  # or your target branch, e.g., 'main'
 
@@ -22,10 +22,16 @@ release:
   script:
     - echo "Creating release for version $CI_COMMIT_TAG..."
     - |
+      # Find the .exe file in the dist directory
+      EXE_FILE=$(ls Backend/dist/*.exe)
+
+      # Create the release with the .exe file as an asset
       curl --header "PRIVATE-TOKEN: $GITLAB_API_TOKEN" \
         --data "name=Release $CI_COMMIT_TAG" \
         --data "tag_name=$CI_COMMIT_TAG" \
         --data "description=Release notes for version $CI_COMMIT_TAG" \
+        --data "assets[links][][name]=YourApp.exe" \
+        --data "assets[links][][url]=$CI_PROJECT_URL/-/jobs/$CI_JOB_ID/artifacts/raw/Backend/dist/$(basename $EXE_FILE)" \
         "https://gitlab.com/api/v4/projects/$CI_PROJECT_ID/releases"
   only:
     - tags
